--- a/public/scan-multi.html
+++ b/public/scan-multi.html
@@ -41,12 +41,18 @@
   .modalBody { padding:12px 14px; }
   .modalHdr h3 { margin:0; font-size:18px; }
   .closeX { border:none; background:#f4f4f4; border-radius:10px; padding:8px 10px; cursor:pointer; }
+  /* ヘッダー操作ボタンを横並びで見やすく */
+  .hdrActions { display:flex; gap:10px; flex-wrap:wrap; align-items:center; }
 </style>
 </head>
 <body>
-  <h2 style="display:flex;align-items:center;gap:10px;flex-wrap:wrap">
-    棚→型の順でスキャン（自動登録）
-    <button id="btnOpenList" class="pill">登録一覧を確認する</button>
+  <h2 style="display:flex;align-items:center;justify-content:space-between;gap:10px;flex-wrap:wrap">
+    <span>棚→型の順でスキャン（自動登録）</span>
+    <span class="hdrActions">
+      <button id="btnOpenList" class="pill">スキャン結果確認</button>
+      <button id="btnStart" class="pill">カメラ開始</button>
+      <button id="btnStop"  class="pill" disabled>停止</button>
+    </span>
   </h2>
 
   <div class="row">
@@ -58,8 +64,7 @@
       <canvas id="det"></canvas>
 
       <div class="controls">
-        <button id="btnStart">カメラ開始</button>
-        <button id="btnStop" disabled>停止</button>
+        <!-- Start/Stopはヘッダーへ移動。ここはテスト画像のみ残す -->
         <label class="btn">画像からテスト<input id="fileTest" type="file" accept="image/*"></label>
         <span id="cap" class="badge"></span>
       </div>
@@ -87,11 +92,11 @@
     </div>
   </div>
 
-  <!-- モーダル：登録一覧 -->
+  <!-- モーダル：スキャン結果確認 -->
   <div id="mask" class="modalMask"></div>
   <div id="modal" class="modal" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
     <div class="modalHdr">
-      <h3 id="modalTitle">登録一覧</h3>
+      <h3 id="modalTitle">スキャン結果確認</h3>
       <button id="btnCloseList" class="closeX">閉じる</button>
     </div>
     <div class="modalBody">
@@ -222,27 +227,30 @@
     ctx.closePath();
   }
 
-  // ★ 固定棚バッジ（常時表示・ほんのり鼓動）
+  // ★ 固定棚バッジ（2倍・濃い緑・白字）
   function drawFixedLocBadge(){
     if(!fixedLoc) return;
-    const padX=10, padY=8;
     const text = `固定棚: ${fixedLoc.loc}`;
-    const t = performance.now()/800; // ふわっと
-    const pulse = 0.85 + 0.15*Math.abs(Math.sin(t)); // 0.85–1.0
-    octx.font = '600 18px system-ui, sans-serif';
-    const w = octx.measureText(text).width + 18*2;
-    const h = 34;
+    const t = performance.now()/800;
+    const pulse = 0.9 + 0.1*Math.abs(Math.sin(t)); // わずかに脈動
+    // フォント/サイズを約2倍へ
+    octx.font = '700 32px system-ui, sans-serif';
+    const w = octx.measureText(text).width + 28*2;
+    const h = 56; // 高さも拡大
     const x = 10, y = 10;
-    octx.globalAlpha = 0.95;
-    octx.fillStyle   = `rgba(16,120,16,${0.20 + 0.15*pulse})`;
-    octx.strokeStyle = `rgba(8,100,8,${0.7})`;
-    octx.lineWidth = 2.5;
-    roundedRect(octx, x, y, w, h, 12);
-    octx.fill(); octx.stroke();
-    octx.fillStyle = '#0a0';
-    octx.textBaseline='middle'; octx.textAlign='left';
-    octx.fillText(text, x+18, y+h/2+0.5);
+
+    // 濃い緑の背景+ストローク
     octx.globalAlpha = 1;
+    octx.fillStyle   = `rgba(3,90,20,${0.75 + 0.15*pulse})`;  // 濃い緑
+    octx.strokeStyle = `rgba(2,77,12,0.95)`;
+    octx.lineWidth = 3.5;
+    roundedRect(octx, x, y, w, h, 14);
+    octx.fill(); octx.stroke();
+
+    // 白字
+    octx.fillStyle = '#fff';
+    octx.textBaseline='middle'; octx.textAlign='left';
+    octx.fillText(text, x+28, y+h/2+0.5);
   }
 
   function drawOverlays(){
@@ -314,7 +322,7 @@
       octx.globalAlpha = 1;
     }
 
-    // ★ 固定棚バッジ（最後に前面へ）
+    // ★ 固定棚バッジ（前面）
     drawFixedLocBadge();
   }
 
@@ -465,7 +473,6 @@
     candidates = next;
   }
 
-  function addFlash(kind, corners){ flashes.push({ kind, corners, until: performance.now()+1200 }); }
   function autoLock(){
     if(!fixedLoc){
       const cLoc = candidates.find(c=>c.kind==='loc' && !c.registered);
@@ -576,7 +583,7 @@
   $("#btnUpdate2").addEventListener("click", submitUpdate);
 
   // ========= 初期 =========
-  (async ()=>{ setStatus("棚→型の順でカメラにかざしてください。上部の緑バッジに“固定棚”を常時表示します。"); })();
+  (async ()=>{ setStatus("棚→型の順でカメラにかざしてください。左上の濃緑バッジに“固定棚”を常時表示します。"); })();
   </script>
 </body>
 </html>
